Move cartridge localization lines into their own file under _NF hierarchy. Add localizations for PDA UI labels

--- a/Content.Client/_NF/CartridgeLoader/Cartridges/AppraisalUiFragment.xaml
+++ b/Content.Client/_NF/CartridgeLoader/Cartridges/AppraisalUiFragment.xaml
@@ -5,8 +5,8 @@
         <BoxContainer Orientation="Vertical" MinHeight="32" MaxHeight="32" VerticalAlignment="Top" Margin="3 0">
             <PanelContainer Name="HeaderPanel">
                 <BoxContainer Orientation="Horizontal" HorizontalExpand="True" Margin="4">
-                    <Label HorizontalExpand="True" Text="Item"/>
-                    <Label HorizontalExpand="True" Text="Appraised Price"/>
+                    <Label HorizontalExpand="True" Text="{Loc 'appraisal-label-name'}"/>
+                    <Label HorizontalExpand="True" Text="{Loc 'appraisal-label-price'}"/>
                 </BoxContainer>
             </PanelContainer>
         </BoxContainer>
