--- a/Content.Client/VendingMachines/UI/VendingMachineMenu.xaml
+++ b/Content.Client/VendingMachines/UI/VendingMachineMenu.xaml
@@ -2,7 +2,9 @@
     xmlns="https://spacestation14.io"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
-    xmlns:co="clr-namespace:Content.Client.UserInterface.Controls">
+    xmlns:co="clr-namespace:Content.Client.UserInterface.Controls"
+    SetSize="360 380"
+    MinSize="300 300"> <!-- Frontier: added SetSize, MinSize -->
     <BoxContainer Name="MainContainer" Orientation="Vertical">
         <BoxContainer Margin ="0 2 0 4" Orientation="Horizontal">
             <Label Text="{Loc 'bank-atm-menu-balance-label'}"
