Rig picker windows

--- a/Content.Client/_NF/Latejoin/CrewPickerWindow.xaml
+++ b/Content.Client/_NF/Latejoin/CrewPickerWindow.xaml
@@ -1,2 +1,9 @@
-<latejoin:CrewPickerWindow xmlns="https://spacestation14.io"
-                                         xmlns:latejoin="clr-namespace:Content.Client._NF.Latejoin" />
+<PanelContainer xmlns="https://spacestation14.io"
+                Access="Public"
+                StyleClasses="PanelBackgroundLight"
+                Margin="0 2 0 2"
+                HorizontalExpand="True"
+                VerticalExpand="True">
+
+    <Label Text="This is the Crew picker!"/>
+</PanelContainer>
