--- a/Content.Client/_NF/Latejoin/PickerWindow.xaml
+++ b/Content.Client/_NF/Latejoin/PickerWindow.xaml
@@ -1,15 +1,23 @@
 ﻿<controls:FancyWindow xmlns="https://spacestation14.io"
-                       xmlns:graphics="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client"
-                       xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
-                       Title="Join Game"
-                       SetSize="600 500">
+                      xmlns:graphics="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client"
+                      xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
+                      Title="Join Game"
+                      SetSize="800 500">
 
     <BoxContainer Orientation="Vertical">
         <BoxContainer Orientation="Horizontal">
-            <Button Name="StationTabButton" Text="{Loc 'frontier-lobby-station-title'}" />
-            <Button Name="CrewTabButton" Text="{Loc 'frontier-lobby-crew-title'}" />
+            <Button Name="StationTabButton"
+                    MinSize="180 40">
+                <Label Text="{Loc 'frontier-lobby-station-title'}"
+                       StyleClasses="FancyWindowTitle" />
+            </Button>
+            <Button Name="CrewTabButton"
+                    MinSize="180 40">
+                <Label Text="{Loc 'frontier-lobby-crew-title'}"
+                       StyleClasses="FancyWindowTitle" />
+            </Button>
         </BoxContainer>
-        <PanelContainer VerticalExpand="True" HorizontalExpand="True" Margin="12 12">
+        <PanelContainer VerticalExpand="True" HorizontalExpand="True">
             <PanelContainer Name="ContentContainer" VerticalExpand="True" HorizontalExpand="True">
                 <PanelContainer.PanelOverride>
                     <graphics:StyleBoxFlat BackgroundColor="#000000FF"
