--- a/Content.Client/_NF/Latejoin/StationPickerListItem.xaml
+++ b/Content.Client/_NF/Latejoin/StationPickerListItem.xaml
@@ -1,9 +1,9 @@
 ﻿<PanelContainer xmlns="https://spacestation14.io"
                 Access="Public"
-                StyleClasses="PanelBackgroundLight"
                 Margin="0 2 0 2"
-                HorizontalExpand="True"
-                VerticalExpand="True">
+                MaxWidth="360"
+                SetHeight="80"
+                HorizontalExpand="True">
 
     <Button Name="StationButton"
             Access="Public"
@@ -20,11 +20,11 @@
                          MaxSize="50 50"
                          Stretch="KeepAspectCentered" />
 
-            <BoxContainer Orientation="Vertical">
+            <BoxContainer Orientation="Vertical" Margin="5 0 0 0" VerticalAlignment="Center">
 
                 <Label Name="StationName"
                     HorizontalExpand="True"
-                    StyleClasses="FancyWindowTitle" />
+                    StyleClasses="FancyWindowTitle"/>
 
                 <RichTextLabel Name="StationSubtext"/>
             </BoxContainer>
