--- a/Content.Client/_EE/Guidebook/Controls/GuideFoodSource.xaml
+++ b/Content.Client/_EE/Guidebook/Controls/GuideFoodSource.xaml
@@ -3,7 +3,7 @@
               HorizontalAlignment="Stretch"
               HorizontalExpand="True"
               Margin="0 0 0 5">
-    <BoxContainer Name="ReactantsContainer" Orientation="Vertical" VerticalAlignment="Center">
+    <BoxContainer Name="ReactantsContainer" Orientation="Vertical" HorizontalExpand="True" VerticalAlignment="Center"> <!-- Frontier: add HorizontalExpand -->
         <TextureRect HorizontalAlignment="Center"
                      Name="SourceTexture"
                      Access="Public"/>
@@ -12,26 +12,26 @@
                HorizontalAlignment="Center"
                VerticalAlignment="Center"
                Access="Public"
-               Margin="2 0 0 0"/>
+               Margin="2 0 0 0"/> <!-- Frontier: Label<RichTextLabel -->
     </BoxContainer>
-    <BoxContainer Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalExpand="True">
+    <BoxContainer Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center"> <!-- Frontier: remove HorizontalExpand -->
         <TextureRect HorizontalAlignment="Center"
                      Name="ProcessingTexture"
                      Access="Public"/>
-        <Label Name="ProcessingLabel"
+        <RichTextLabel Name="ProcessingLabel"
                HorizontalAlignment="Center"
                VerticalAlignment="Center"
                Access="Public"
-               Margin="2 0 0 0"/>
+               Margin="2 0 0 0"/> <!-- Frontier: Label<RichTextLabel -->
     </BoxContainer>
-    <BoxContainer Orientation="Vertical" VerticalAlignment="Center">
+    <BoxContainer Orientation="Vertical" HorizontalExpand="True" VerticalAlignment="Center"> <!-- Frontier: add HorizontalExpand -->
         <TextureRect HorizontalAlignment="Center"
                      Name="OutputsTexture"
                      Access="Public"/>
-        <Label Name="OutputsLabel"
+        <RichTextLabel Name="OutputsLabel"
                HorizontalAlignment="Center"
                VerticalAlignment="Center"
                Access="Public"
-               Margin="2 0 0 0"/>
+               Margin="2 0 0 0"/> <!-- Frontier: Label<RichTextLabel -->
     </BoxContainer>
 </BoxContainer>
