--- a/Content.Client/_NF/Latejoin/CrewPickerControl.xaml
+++ b/Content.Client/_NF/Latejoin/CrewPickerControl.xaml
@@ -1,9 +1,10 @@
 <PanelContainer xmlns="https://spacestation14.io"
                 Access="Public"
-                StyleClasses="PanelBackgroundLight"
                 Margin="0 2 0 2"
                 HorizontalExpand="True"
                 VerticalExpand="True">
 
+    <PanelContainer VerticalExpand="True" SetWidth="360" StyleClasses="PanelBackgroundLight">
     <Label Text="This is the Crew picker!"/>
+    </PanelContainer>
 </PanelContainer>
