--- a/Content.Client/_NF/Latejoin/StationOrCrewLargeControl.xaml
+++ b/Content.Client/_NF/Latejoin/StationOrCrewLargeControl.xaml
@@ -1,13 +1,10 @@
-﻿<controls:FancyWindow
-    xmlns="https://spacestation14.io"
-    xmlns:lateJoin="clr-namespace:Content.Client._NF.Latejoin"
-    xmlns:cc="clr-namespace:Content.Client.Administration.UI.CustomControls"
-    xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
-    xmlns:xNamespace="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:maths="clr-namespace:Robust.Shared.Maths;assembly=Robust.Shared.Maths"
-    Title="Join Game"
-    SetSize="600 320">
-    <PanelContainer StyleClasses="BackgroundDark"></PanelContainer>
+﻿<PanelContainer xmlns="https://spacestation14.io"
+                xmlns:customControls="clr-namespace:Content.Client.Administration.UI.CustomControls"
+                xmlns:maths="clr-namespace:Robust.Shared.Maths;assembly=Robust.Shared.Maths"
+                xmlns:xNamespace="http://schemas.microsoft.com/winfx/2006/xaml"
+                Access="Public"
+                HorizontalExpand="True"
+                VerticalExpand="True">
     <BoxContainer Orientation="Vertical" VerticalExpand="True" Margin="8">
 
         <Button Name="StationButton"
@@ -34,14 +31,14 @@
                                  MaxSize="30 30"
                                  Stretch="KeepAspectCentered" />
                 </BoxContainer>
-                <cc:HSeparator SeparatorColor="#A3875A" StyleClasses="LowDivider" Margin="0 0 36 0" />
+                <customControls:HSeparator SeparatorColor="#A3875A" StyleClasses="LowDivider" Margin="0 0 36 0" />
 
                 <RichTextLabel Text="{Loc 'frontier-lobby-station-subtext'}" />
 
                 <Label Name="NoStationsAvailableLabel"
-                    Text="{Loc 'frontier-lobby-no-stations-available'}"
-                    Margin="0 4 0 4"
-                    FontColorOverride="{xNamespace:Static maths:Color.OrangeRed}" />
+                       Text="{Loc 'frontier-lobby-no-stations-available'}"
+                       Margin="0 4 0 4"
+                       FontColorOverride="{xNamespace:Static maths:Color.OrangeRed}" />
             </BoxContainer>
         </Button>
 
@@ -69,7 +66,7 @@
                                  MaxSize="30 30"
                                  Stretch="KeepAspectCentered" />
                 </BoxContainer>
-                <cc:HSeparator SeparatorColor="#A3875A" StyleClasses="LowDivider" Margin="0 0 36 0" />
+                <customControls:HSeparator SeparatorColor="#A3875A" StyleClasses="LowDivider" Margin="0 0 36 0" />
 
                 <RichTextLabel Text="{Loc 'frontier-lobby-crew-subtext'}" />
 
@@ -81,4 +78,4 @@
         </Button>
     </BoxContainer>
 
-</controls:FancyWindow>
+</PanelContainer>
