--- a/Content.Client/_NF/LateJoin/Controls/StationPickerControl.xaml
+++ b/Content.Client/_NF/LateJoin/Controls/StationPickerControl.xaml
@@ -1,8 +1,9 @@
-<PanelContainer xmlns="https://spacestation14.io"
-                xmlns:graphics="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client"
-                Access="Public"
-                HorizontalExpand="True"
-                VerticalExpand="True">
+<controls:StationPickerControl xmlns="https://spacestation14.io"
+                      xmlns:graphics="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client"
+                      xmlns:controls="clr-namespace:Content.Client._NF.LateJoin.Controls"
+                      Access="Public"
+                      HorizontalExpand="True"
+                      VerticalExpand="True">
     <BoxContainer Orientation="Horizontal" HorizontalExpand="True"
                   VerticalExpand="True">
         <PanelContainer VerticalExpand="True" SetWidth="380">
@@ -62,4 +63,4 @@
             </BoxContainer>
         </PanelContainer>
     </BoxContainer>
-</PanelContainer>
+</controls:StationPickerControl>
