--- a/Content.Client/_NF/Medical/UI/MedicalBountyRedemptionMenu.xaml
+++ b/Content.Client/_NF/Medical/UI/MedicalBountyRedemptionMenu.xaml
@@ -1,19 +1,25 @@
 <controls:FancyWindow xmlns="https://spacestation14.io"
                       xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
-            SetSize="300 150"
-            MinSize="300 150"
+            SetSize="315 165"
+            MinSize="315 165"
                       Title="{Loc 'medical-bounty-redemption-ui-title'}">
     <BoxContainer Orientation="Vertical"
                   VerticalExpand="True"
                   HorizontalExpand="True">
-        <BoxContainer Orientation="Vertical" Margin="10">
+        <BoxContainer Orientation="Vertical" Margin="5">
+            <Label Name="BodyLabel"
+                    HorizontalAlignment="Center"
+                    HorizontalExpand="True"
+                    Text="{Loc 'medical-bounty-redemption-body-label-init'}"
+                    Margin="0 5"/>
             <Label Name="RedeemLabel"
                     HorizontalAlignment="Center"
                     HorizontalExpand="True"
-                    Text="{Loc 'medical-bounty-redemption-ui-init'}"/>
+                    Text="{Loc 'medical-bounty-redemption-redeem-label-init'}"
+                    Margin="0 5"/>
             <Button Name="SellButton"
-                    Text="{Loc 'medical-bounty-redemption-ui-sell-button'}"/>
-            <TextureButton VerticalExpand="True" />
+                    Text="{Loc 'medical-bounty-redemption-ui-sell-button'}"
+                    Margin="0 5"/>
         </BoxContainer>
         <!-- Footer -->
         <BoxContainer Orientation="Vertical">
