--- a/Content.Client/_NF/ShuttleRecords/UI/ShuttleRecordsWindow.xaml
+++ b/Content.Client/_NF/ShuttleRecords/UI/ShuttleRecordsWindow.xaml
@@ -29,6 +29,7 @@
                     </ScrollContainer>
                 </BoxContainer>
             </PanelContainer>
+            <Label Name="TransactionCostLabel" Text=""/>
         </BoxContainer>
 
         <BoxContainer Name="ShuttleRecordDetailsContainer" Orientation="Vertical" MinSize="250 300">
