--- a/Content.Client/_NF/ShuttleRecords/UI/ShuttleRecordDetailsControl.xaml
+++ b/Content.Client/_NF/ShuttleRecords/UI/ShuttleRecordDetailsControl.xaml
@@ -3,10 +3,10 @@
                    HorizontalExpand="True"
                    VerticalExpand="True"
                    MinSize="250 300">
-    <BoxContainer Orientation="Vertical">
+    <BoxContainer Orientation="Vertical" SeparationOverride="4">
         <Label Name="ShuttleName" Margin="4 0 0 0"/>
         <Label Name="ShuttleOwner" Margin="4 0 0 0"/>
         <Label Name="ShuttleActivity" Margin="4 0 0 0"/>
-        <Button Name="CopyDeedButton" Text="{Loc 'shuttle-records-copy-deed-button'}" Access="Public"/>
+        <Button Name="CopyDeedButton" Text="{Loc 'shuttle-records-copy-deed-button'}" Access="Public" Margin="0 20 0 0"/>
     </BoxContainer>
 </PanelContainer>
