--- a/Content.Client/_NF/ShuttleRecords/UI/ShuttleRecordsWindow.xaml
+++ b/Content.Client/_NF/ShuttleRecords/UI/ShuttleRecordsWindow.xaml
@@ -1,40 +1,51 @@
 ﻿<DefaultWindow xmlns="https://spacestation14.io"
                xmlns:graphics="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client"
                Title="{Loc 'shuttle-records-console-window-title'}"
-               MinSize="500 300">
+               MinSize="700 300">
 
-    <BoxContainer HorizontalExpand="True" VerticalExpand="True" Orientation="Horizontal" Margin="5">
+    <BoxContainer Orientation="Vertical" Margin="5 0 5 0">
 
-        <BoxContainer Orientation="Vertical" MinSize="250 300">
-            <Label Text="{Loc 'shuttle-records-transactions'}" />
-            <PanelContainer VerticalExpand="True" HorizontalExpand="True" Margin="10">
-                <PanelContainer.PanelOverride>
-                    <graphics:StyleBoxFlat BorderThickness="2" BorderColor="#777777" />
-                </PanelContainer.PanelOverride>
-                <BoxContainer Orientation="Vertical"
-                              VerticalExpand="True"
-                              HorizontalExpand="True">
-
-
-                    <ScrollContainer HorizontalExpand="True"
-                                     VerticalExpand="True"
-                                     VScrollEnabled="True">
-                        <BoxContainer Name="ShuttleRecordList"
-                                      Orientation="Vertical"
-                                      HorizontalExpand="True"
-                                      VerticalExpand="True"
-                                      MinSize="50 50"
-                                      Margin="4">
-                        </BoxContainer>
-                    </ScrollContainer>
-                </BoxContainer>
-            </PanelContainer>
-            <Label Name="TransactionCostLabel" Text=""/>
+        <BoxContainer Orientation="Horizontal" Margin="5 0 5 0">
+            <Label Text="{Loc 'shuttle-records-transactions'}" HorizontalExpand="True" />
+            <BoxContainer Orientation="Horizontal">
+                <Label Text="{Loc 'shuttle-records-search'}" StyleClasses="LabelSubText" Margin="0 0 5 0" />
+                <LineEdit Name="SearchText" Access="Public" MinHeight="30" MinWidth="120" />
+            </BoxContainer>
+            <Button Name="ClearSearchButton" Access="Public" Text="✖" />
         </BoxContainer>
 
-        <BoxContainer Name="ShuttleRecordDetailsContainer" Orientation="Vertical" MinSize="250 300">
-            <Label Text="{Loc 'shuttle-records-detail-title'}" />
+        <BoxContainer HorizontalExpand="True" VerticalExpand="True" Orientation="Horizontal" Margin="5">
+            <BoxContainer Orientation="Vertical" MinSize="250 300">
+                <PanelContainer VerticalExpand="True" HorizontalExpand="True" Margin="10">
+                    <PanelContainer.PanelOverride>
+                        <graphics:StyleBoxFlat BorderThickness="2" BorderColor="#777777" />
+                    </PanelContainer.PanelOverride>
+                    <BoxContainer Orientation="Vertical"
+                                  VerticalExpand="True"
+                                  HorizontalExpand="True">
 
+
+                        <ScrollContainer HorizontalExpand="True"
+                                         VerticalExpand="True"
+                                         VScrollEnabled="True">
+                            <BoxContainer Name="ShuttleRecordList"
+                                          Orientation="Vertical"
+                                          HorizontalExpand="True"
+                                          VerticalExpand="True"
+                                          MinSize="50 50"
+                                          Margin="4">
+                            </BoxContainer>
+                        </ScrollContainer>
+                    </BoxContainer>
+                </PanelContainer>
+            </BoxContainer>
+
+            <BoxContainer Orientation="Vertical">
+                <BoxContainer Name="ShuttleRecordDetailsContainer" Orientation="Vertical" MinSize="250 300" Margin="10">
+                    <Label Text="{Loc 'shuttle-records-detail-title'}" />
+                </BoxContainer>
+                <Label Name="TransactionCostLabel" Text="" StyleClasses="LabelBig" Margin="10"/>
+            </BoxContainer>
         </BoxContainer>
     </BoxContainer>
 </DefaultWindow>
