--- a/Content.Client/_NF/ShuttleRecords/UI/ShuttleRecordDetailsControl.xaml
+++ b/Content.Client/_NF/ShuttleRecords/UI/ShuttleRecordDetailsControl.xaml
@@ -7,6 +7,7 @@
         <Label Name="ShuttleName" Margin="4 0 0 0"/>
         <Label Name="ShuttleOwner" Margin="4 0 0 0"/>
         <Label Name="ShuttleActivity" Margin="4 0 0 0"/>
+        <RichTextLabel Name="TimeOfPurchase" Margin="4 0 0 0" Access="Public"/>
         <Button Name="CopyDeedButton" Text="{Loc 'shuttle-records-copy-deed-button'}" Access="Public" Margin="0 20 0 0"/>
     </BoxContainer>
 </PanelContainer>
