--- a/Content.Client/_NF/CartridgeLoader/Cartridges/LedgerEntry.xaml
+++ b/Content.Client/_NF/CartridgeLoader/Cartridges/LedgerEntry.xaml
@@ -1,14 +1,15 @@
 <BoxContainer xmlns="https://spacestation14.io"
-                      xmlns:cartridges="clr-namespace:Content.Client._NF.CartridgeLoader.Cartridges"
-                      Orientation="Vertical"
-                      HorizontalExpand="True"
-                      SetHeight="30">
+              xmlns:cartridges="clr-namespace:Content.Client._NF.CartridgeLoader.Cartridges"
+              Orientation="Vertical"
+              HorizontalExpand="True">
     <BoxContainer Orientation="Horizontal"
-                  HorizontalExpand="True">
+                  HorizontalExpand="True"
+                  SetHeight="30">
         <Label Name="Description"
-            Access="Public"/>
+               Access="Public"/>
         <Label Name="Value"
-            Access="Public"
-            HorizontalAlignment="Right"/>
+               Access="Public"
+               HorizontalAlignment="Right"
+               HorizontalExpand="True"/>
     </BoxContainer>
 </BoxContainer>
