--- a/Content.Client/Research/UI/DiskConsoleMenu.xaml
+++ b/Content.Client/Research/UI/DiskConsoleMenu.xaml
@@ -8,9 +8,19 @@
                   HorizontalExpand="True"
                   VerticalExpand="True"
                   Margin="10 10 10 10">
-        <Button Name="ServerButton"
-                Text="{Loc 'lathe-menu-server-list'}"
-                HorizontalAlignment="Left"></Button>
+        <BoxContainer Orientation="Horizontal">
+            <Button Name="ServerButton"
+                    Text="{Loc 'lathe-menu-server-list'}"
+                    HorizontalAlignment="Left"/>
+            <!-- Frontier - start -->
+            <Button Name="InsertOrEjectIdCardButton"
+                    Text="{Loc 'tech-disk-ui-insert-eject-id-button'}"
+                    HorizontalAlignment="Left"/>
+            <Button Name="EjectResearchButton"
+                    Text="{Loc 'tech-disk-ui-eject-research-button'}"
+                    HorizontalAlignment="Left"/>
+            <!-- Frontier - end -->
+        </BoxContainer>
         <PanelContainer Margin="0 10 0 0" VerticalExpand="True">
             <PanelContainer.PanelOverride>
                 <graphics:StyleBoxFlat BackgroundColor="#000000FF"/>
