--- a/Content.Client/Research/UI/DiskConsoleMenu.xaml
+++ b/Content.Client/Research/UI/DiskConsoleMenu.xaml
@@ -8,6 +8,7 @@
                   HorizontalExpand="True"
                   VerticalExpand="True"
                   Margin="10 10 10 10">
+        <Label Text="{Loc 'tech-disk-ui-eject-description'}" Margin="0 4 0 4"/>
         <BoxContainer Orientation="Horizontal">
             <Button Name="ServerButton"
                     Text="{Loc 'lathe-menu-server-list'}"
