--- a/Content.Client/Research/UI/DiskConsoleMenu.xaml
+++ b/Content.Client/Research/UI/DiskConsoleMenu.xaml
@@ -2,13 +2,13 @@
                      xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
                      xmlns:graphics="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client"
                      Title="{Loc 'tech-disk-ui-name'}"
-                     MinSize="400 260"
-                     SetSize="400 260">
+                     MinSize="460 400"
+                     SetSize="460 400">
     <BoxContainer Orientation="Vertical"
                   HorizontalExpand="True"
                   VerticalExpand="True"
                   Margin="10 10 10 10">
-        <Label Text="{Loc 'tech-disk-ui-eject-description'}" Margin="0 4 0 4"/>
+        <RichTextLabel Text="{Loc 'tech-disk-ui-eject-description'}" Margin="0 8 0 8"/>
         <BoxContainer Orientation="Horizontal">
             <Button Name="ServerButton"
                     Text="{Loc 'lathe-menu-server-list'}"
@@ -19,6 +19,9 @@
                     HorizontalAlignment="Left"/>
             <Button Name="EjectResearchButton"
                     Text="{Loc 'tech-disk-ui-eject-research-button'}"
+                    HorizontalAlignment="Left"/>
+            <Button Name="ImportResearchButton"
+                    Text="{Loc 'tech-disk-ui-import-research-button'}"
                     HorizontalAlignment="Left"/>
             <!-- Frontier - end -->
         </BoxContainer>
